--- a/templates/base.html
+++ b/templates/base.html
@@ -15,11 +15,11 @@
         {% block navbar %}
             <div class="container">
                 <div class="page-header">
-                    <div class="navbar navbar-fixed-top">
-                        <div class="container">
+                    <div class="navbar-header navbar-fixed-top">
+                        <div class="container px-0 border-bottom border-secondary">
                             <br>
-                            <a href="/index" class="btn btn-info" role="button">Home</a>
-                            <a href="/prediction" class="btn btn-info" role="button">Diagnostic</a>
+                            <a href="/index" class="btn btn-info text-white" role="button">Home</a>
+                            <a href="/prediction" class="btn btn-info text-white" role="button">FF prediction</a>
                         </div>
                     </div>
                 </div>
