--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="container">
-        <div class="page-header">
-            <h3>딥러닝을 이용한 당뇨병 진단 예측</h3>
+    <div class="container py-5">
+        <div class="page-header bg-success bg-opacity-10 text-success rounded-3 px-4 py-2">
+            <h3>AI 기반 산불 예측 서비스</h3>
         </div>
     </div>
 {% endblock %}
