--- a/templates/result.html
+++ b/templates/result.html
@@ -2,12 +2,12 @@
 {% block content %}
     <div class="container">
         <div class="page-header">
-            <h2 class="alert alert-success">진단 예측 결과</h2>
+            <h2 class="alert alert-success">산불 예측 결과</h2>
             <br>
-            <h4 class="alert alert-light">당뇨병 확률:</h4>
+            <h4 class="alert alert-light">산불 발생 예상 면적:</h4>
             <h4 class="alert alert-dark">
                 <p>
-                    <b>{{ res }}%</b>
+                    <b>{{ res }}m²</b>
                 </p>
             </h4>
         </div>
